utils-core/main/default/objects/Datatable_Action_Config__mdt/Datatable_Action_Config__mdt.object-meta.xml
<CustomObject>
    <description>Table and Row action configurations for Datatable_Config__mdt</description>
    <label>Datatable Action Config</label>
    <pluralLabel>Datatable Action Config</pluralLabel>
</CustomObject>