utils-core/main/default/objects/Datatable_Action_Config__mdt/fields/Dialog_Size__c.field-meta.xml
<CustomField>
    <fullName>Dialog_Size__c</fullName>
    <label>Dialog Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>