utils-core/main/default/objects/Datatable_Action_Config__mdt/fields/LWC_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Name__c</fullName>
    <inlineHelpText>Aura format, c:myAwesomeComponent</inlineHelpText>
    <label>LWC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>