utils-core/main/default/objects/Datatable_Action_Config__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>For Table / Overflow actions, determines order at top of table. Table can be 1 or 2. Overflow can be &gt;= 3.

For Row Actions, determines order which the action shows up per row, in each row&apos;s dropdown menu.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>