utils-core/main/default/objects/Datatable_Action_Config__mdt/fields/Overflow_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Action_Name__c</fullName>
    <inlineHelpText>Used when Type = &apos;Overflow Table Action&apos;. Defines overflow actions for single/multi row actions at the top of the table.</inlineHelpText>
    <label>Overflow Action Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>custom_lwc</fullName>
                <default>true</default>
                <label>custom_lwc</label>
            </value>
            <value>
                <fullName>custom_flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>