utils-core/main/default/objects/Datatable_Action_Config__mdt/fields/Row_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Row_Action_Name__c</fullName>
    <inlineHelpText>Used when Type = &apos;Row Action&apos;. Defines the actions for an individual row in the table.</inlineHelpText>
    <label>Row Action Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>edit_row</fullName>
            </value>
            <value>
                <fullName>delete_row</fullName>
            </value>
            <value>
                <fullName>custom_flow</fullName>
            </value>
            <value>
                <fullName>custom_lwc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>