utils-core/main/default/objects/Datatable_Action_Config__mdt/fields/Table_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Action_Name__c</fullName>
    <inlineHelpText>Used when Type = &apos;Table Action&apos;. Defines the actions for single/multi select at the top of the table.</inlineHelpText>
    <label>Table Action Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>custom_lwc</fullName>
                <default>true</default>
                <label>custom_lwc</label>
            </value>
            <value>
                <fullName>custom_flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>