utils-core/main/default/objects/Datatable_Action_Config__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Table actions are single / multi row above the table.

Overflow actions are single / multi row dropdown actions above the table.

Row Actions are dropdown actions on the far right for each individual row.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Table Action</fullName>
            </value>
            <value>
                <fullName>Overflow Table Action</fullName>
            </value>
            <value>
                <fullName>Row Action</fullName>
            </value>
            <value>
                <fullName>Flow Table Action - Primary</fullName>
                <isActive>false</isActive>
                <label>Flow Table Action - Primary</label>
            </value>
            <value>
                <fullName>Flow Table Action - Secondary</fullName>
                <isActive>false</isActive>
                <label>Flow Table Action - Secondary</label>
            </value>
            <value>
                <fullName>LWC Table Action - Primary</fullName>
                <isActive>false</isActive>
                <label>LWC Table Action - Primary</label>
            </value>
            <value>
                <fullName>LWC Table Action - Secondary</fullName>
                <isActive>false</isActive>
                <label>LWC Table Action - Secondary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>