utils-core/main/default/objects/Datatable_Action_Config__mdt/validationRules/Require_api_name_for_custom_lwc_action.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_api_name_for_custom_lwc_action</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Type__c ) == &apos;Row Action&apos;
&amp;&amp;
TEXT( Row_Action_Name__c ) == &apos;custom_lwc&apos;
&amp;&amp;
ISBLANK( LWC_Name__c )</errorConditionFormula>
    <errorDisplayField>LWC_Name__c</errorDisplayField>
    <errorMessage>Required for &apos;custom_lwc&apos; Row Action</errorMessage>
</ValidationRule>