utils-core/main/default/objects/Datatable_Action_Config__mdt/validationRules/Require_api_name_for_table_action_old.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_api_name_for_table_action_old</fullName>
    <active>true</active>
    <errorConditionFormula>(
    CONTAINS( TEXT( Type__c ), &apos;Flow Table Action&apos; )
    &amp;&amp;
    ISBLANK( Flow_API_Name__c )
)
||
(
    CONTAINS( TEXT( Type__c ), &apos;LWC Table Action&apos; )
    &amp;&amp;
    ISBLANK( LWC_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>LWC Name or Flow API Name is required for Table Action</errorMessage>
</ValidationRule>