utils-core/main/default/objects/Datatable_Action_Config__mdt/validationRules/Require_order_for_overflow_actions.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_order_for_overflow_actions</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(LOWER(TEXT(Type__c)), &apos;overflow&apos;)
&amp;&amp;
(
  ISBLANK( Order__c )
  || Order__c &lt; 3
)</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>Required for Overflow actions. Must be &gt;= 3</errorMessage>
</ValidationRule>