utils-core/main/default/objects/Datatable_Action_Config__mdt/validationRules/Require_order_for_row_actions.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_order_for_row_actions</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Type__c ) == &apos;Row Action&apos;
&amp;&amp;
ISBLANK( Order__c )</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>Required for Row Actions</errorMessage>
</ValidationRule>