utils-core/main/default/objects/Datatable_Action_Config__mdt/validationRules/Require_overflow_action_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_overflow_action_name</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(LOWER(TEXT( Type__c )), &apos;overflow&apos;)
&amp;&amp;
ISBLANK(TEXT( Overflow_Action_Name__c ))</errorConditionFormula>
    <errorDisplayField>Overflow_Action_Name__c</errorDisplayField>
    <errorMessage>Required for Overflow actions</errorMessage>
</ValidationRule>