utils-core/main/default/objects/Datatable_Action_Config__mdt/validationRules/Require_row_action_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_row_action_name</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(LOWER(TEXT( Type__c )), &apos;row&apos;)
&amp;&amp;
ISBLANK(TEXT( Row_Action_Name__c ))</errorConditionFormula>
    <errorDisplayField>Row_Action_Name__c</errorDisplayField>
    <errorMessage>Required for Row actions</errorMessage>
</ValidationRule>