utils-core/main/default/objects/Datatable_Action_Config__mdt/validationRules/Require_table_action_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_table_action_name</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(LOWER(TEXT( Type__c )), &apos;table&apos;)
&amp;&amp;
NOT(CONTAINS(LOWER(TEXT( Type__c )), &apos;overflow&apos;))
&amp;&amp;
ISBLANK(TEXT( Table_Action_Name__c ))</errorConditionFormula>
    <errorDisplayField>Table_Action_Name__c</errorDisplayField>
    <errorMessage>Required for Table Actions</errorMessage>
</ValidationRule>