utils-core/main/default/objects/Datatable_Action_Config__mdt/listViews/All_Configs.listView-meta.xml
<ListView>
    <fullName>All_Configs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Datatable_Config__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Table_Action_Name__c</columns>
    <columns>Overflow_Action_Name__c</columns>
    <columns>Row_Action_Name__c</columns>
    <columns>Button_Label__c</columns>
    <columns>Flow_API_Name__c</columns>
    <columns>LWC_Name__c</columns>
    <columns>Dialog_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configs</label>
</ListView>